# VitalSync

backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
backend/api/: api.py
backend/api/routes/agent/: router.py
backend/api/routes/auth/: router.py
backend/api/routes/centers/: router.py
backend/api/routes/doctors/: router.py
backend/api/routes/meds/: router.py
backend/core/: client_db.py
backend/docs/: api_doc.tex
backend/schemas/: agent.py  agent_meds.py  auth.py  centers.py  doctors.py  meds.py  searcher.py
backend/scripts/: medicine_agent_cli.py
backend/services/: auth.py  centers.py  doctors.py  email.py  meds.py  user.py  user_profile.py
backend/services/agent/: agent.py
backend/services/agent/tools/: recommend_specialty.py  search_medicine.py
backend/tests/: test_agent_endpoints.py  test_medicine_tools.py
frontend/vitalsync/: .env.example  package-lock.json  package.json
frontend/vitalsync/app/: globals.css  layout.tsx
frontend/vitalsync/hooks/: useAdvancedMedicineSearch.ts  useChat.ts  useCurrentUser.ts  useDoctorDetail.ts  useDoctorSearchQuery.ts  useDoctorsQuery.ts  useEmergencyCenters.ts  useLocationMutations.ts  useMedicinesQuery.ts  useOnClickOutside.ts  useSavedLocationsQuery.ts  useSymptomConversation.ts  useSymptomGuide.ts
frontend/vitalsync/lib/: api.ts  utils.ts
frontend/vitalsync/types/: user.ts  (+5 more)
scrapers/: .gitignore  README.md  lista_especialidades.txt  pyproject.toml  test.py
scrapers/ScraperIpress/: ScraperIpress.py  example_data_ipress.txt
scrapers/ScraperMediccos/: ScraperMedicos.py
(+130 files in other folders)
