[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.9"
dependencies = [
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "boto3>=1.35.21",
    "pydantic-ai>=1.22.0",
    "langgraph>=1.0.3",
    "typesense>=1.3.0",
    "fastapi>=0.121.3",
]
